Fix Footer Spacing
Fixed Footer Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -419,7 +419,7 @@ input, textarea {
 	background-repeat: no-repeat;
    color: #fff;
    font-size: 12px;
-   margin-top: 40px;
+   margin-top: 5px;
    padding-bottom: 80px;
 }
 
